♻️ use Files.newFileInputstream instead of the old one